txt-output/39.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: there are several ways to fix the program. No oracle given.            
v22 = \a -> \b -> (if True then a else b,
                   \c -> b c,
                   b (\x -> \y -> y ) 1 True,
                   (a 1)+1)

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\39.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\39.hs:9:22:
    No instance for (Num (t2 -> t3 -> t3))
      arising from the literal `1' at ill-typed\39.hs:9:22
    Possible fix:
      add an instance declaration for (Num (t2 -> t3 -> t3))
    In the first argument of `a', namely `1'
    In the first argument of `(+)', namely `(a 1)'
    In the expression: (a 1) + 1

ill-typed\39.hs:9:25:
    No instance for (Num (t -> Bool -> t1))
      arising from the literal `1' at ill-typed\39.hs:9:25
    Possible fix:
      add an instance declaration for (Num (t -> Bool -> t1))
    In the second argument of `(+)', namely `1'
    In the expression: (a 1) + 1
    In the expression:
        (if True then a else b,
         \ c -> b c,
         b (\ x -> \ y -> y) 1 True,
           (a 1) + 1)


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\39.hs, ill-typed\39.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\39.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\39.hs:8:39: error:
    * Ambiguous type variable `t0' arising from the literal `1'
      prevents the constraint `(Num t0)' from being solved.
      Relevant bindings include
        b :: (p0 -> p1 -> p1) -> t0 -> Bool -> c0
          (bound at ill-typed\39.hs:6:14)
        a :: (p0 -> p1 -> p1) -> t0 -> Bool -> c0
          (bound at ill-typed\39.hs:6:8)
        v22 :: ((p0 -> p1 -> p1) -> t0 -> Bool -> c0)
               -> ((p0 -> p1 -> p1) -> t0 -> Bool -> c0)
               -> ((p0 -> p1 -> p1) -> t0 -> Bool -> c0,
                   (p0 -> p1 -> p1) -> t0 -> Bool -> c0, c0, t0 -> Bool -> c0)
          (bound at ill-typed\39.hs:6:1)
      Probable fix: use a type annotation to specify what `t0' should be.
      These potential instances exist:
        instance Num Integer -- Defined in `GHC.Num'
        instance Num Double -- Defined in `GHC.Float'
        instance Num Float -- Defined in `GHC.Float'
        ...plus two others
        ...plus one instance involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    * In the second argument of `b', namely `1'
      In the expression: b (\ x -> \ y -> y) 1 True
      In the expression:
        (if True then a else b, \ c -> b c, b (\ x -> \ y -> y) 1 True, 
         (a 1) + 1)
  |
8 |                    b (\x -> \y -> y ) 1 True,
  |                                       ^

ill-typed\39.hs:9:23: error:
    * No instance for (Num (p0 -> p1 -> p1))
        arising from the literal `1'
        (maybe you haven't applied a function to enough arguments?)
    * In the first argument of `a', namely `1'
      In the first argument of `(+)', namely `(a 1)'
      In the expression: (a 1) + 1
  |
9 |                    (a 1)+1)
  |                       ^

ill-typed\39.hs:9:25: error:
    * No instance for (Num (t0 -> Bool -> c0))
        arising from a use of `+'
        (maybe you haven't applied a function to enough arguments?)
    * In the expression: (a 1) + 1
      In the expression:
        (if True then a else b, \ c -> b c, b (\ x -> \ y -> y) 1 True, 
         (a 1) + 1)
      In the expression:
        \ b
          -> (if True then a else b, \ c -> b c, 
              b (\ x -> \ y -> ...) 1 True, (a 1) + 1)
  |
9 |                    (a 1)+1)
  |                         ^
